[package]
name = "NexusNet"
version = "0.1.2"
edition = "2024"

[dependencies]
chrono = "0.4.44"
colored = "3.1.1"
flate2 = "1.1.9"
libp2p = { version = "0.56.0", features = ["full"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
get_if_addrs = "0.5.3"
