[package]
name = "NexusNet"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
chrono = "0.4.44"
colored = "3.1.1"
flate2 = "1.1.9"
libp2p = { version = "0.56.0", features = ["full"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
get_if_addrs = "0.5.3"
base64 = "0.22"
scopeguard = "1"
uuid = "1.23.1"
